--- a/projects/Qualcomm/devices/SM8550/bootloader/LinuxLoader.cfg
+++ b/projects/Qualcomm/devices/SM8550/bootloader/LinuxLoader.cfg
@@ -5,10 +5,12 @@ MassStorageLUN = 0
 DefaultVolUp = "Linux"
 UsbHostMode = false
 HypUartEnable = false
-DisableDisplayHW = false
+DisableDisplayHW = true
 
 [Linux]
-Image = "/boot/u-boot-nodtb.bin"
-initrd = "/boot/u-boot-nodtb.bin"
-devicetree = "/boot/u-boot.dtb"
-cmdline = "nodtbo"
+Image = "KERNEL"
+initrd = "KERNEL"
+#devicetree = "qcs8550-ayn-odin2.dtb"
+devicetree = "qcs8550-ayn-odin2portal.dtb"
+#devicetree = "qcs8550-ayn-odin2mini.dtb"
+cmdline = "boot=LABEL=ROCKNIX disk=LABEL=STORAGE grub_portable quiet rootwait console=tty0 allow_mismatched_32bit_el0"
