es_features.cfg: update for psvita

--- a/packages/ui/emulationstation/config/common/es_features.cfg
+++ b/packages/ui/emulationstation/config/common/es_features.cfg
@@ -1468,6 +1468,11 @@
     </core>
    </cores>
   </emulator>
+  <emulator name="vita3k">
+    <cores>
+      <core name="vita3k">
+    </cores>
+  </emulator>
   <emulator name="portmaster">
    <cores>
     <core name="portmaster">
