--- a/packages/ui/emulationstation/config/common/es_features.cfg
+++ b/packages/ui/emulationstation/config/common/es_features.cfg
@@ -1470,7 +1470,7 @@
   </emulator>
   <emulator name="vita3k">
     <cores>
-      <core name="vita3k">
+      <core name="vita3k-sa">
     </cores>
   </emulator>
   <emulator name="portmaster">
